<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                    <!--
                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtube_player_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        app:videoId="S0Q4gqBUs7c"
                        app:autoPlay="false"
                        app:showFullScreenButton="false" />
                        -->
                </LinearLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="32sp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/title_box"
                android:radius="20dp">

            </TextView>

            <TextView
                android:id="@+id/overview_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/overview_word"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingHorizontal="10dp">
            </TextView>

            <TextView
                android:id="@+id/overview_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingHorizontal="10dp">

            </TextView>
            <TextView
                android:id="@+id/genres_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/genres_word"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="10dp">
            </TextView>

            <TextView
                android:id="@+id/genres_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingHorizontal="10dp">

            </TextView>
            <TextView
                android:id="@+id/year_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/year_word"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="10dp">
            </TextView>

            <TextView
                android:id="@+id/year_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingHorizontal="10dp">

            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/watch_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_add_circle_outline_24"/>
                <ImageView
                    android:id="@+id/facebook_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_baseline_facebook_24"/>
                <ImageView
                    android:id="@+id/twitter_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_twitter_logo_dialog"/>
            </LinearLayout>
            <TextView
                android:id="@+id/cast_word"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="10dp"
                android:text="@string/cast_word"/>
            <LinearLayout
                android:id="@+id/cast_row1"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="8dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/cast_box1"
                    android:visibility="invisible"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_theaters_white_18dp"/>
                    <TextView
                        android:id="@+id/cast_name1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"
                        android:text="@string/app_name"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/cast_box2"
                    android:visibility="invisible"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:layout_gravity="center_horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image2"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_theaters_white_18dp"/>
                    <TextView
                        android:id="@+id/cast_name2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"
                        android:text="@string/app_name"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/cast_box3"
                    android:visibility="invisible"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image3"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_theaters_white_18dp"/>
                    <TextView
                        android:id="@+id/cast_name3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"
                        android:text="@string/app_name"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cast_row2"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="8dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/cast_box4"
                    android:visibility="invisible"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image4"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_theaters_white_18dp"/>
                    <TextView
                        android:id="@+id/cast_name4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"
                        android:text="@string/app_name"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/cast_box5"
                    android:visibility="invisible"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:layout_gravity="center_horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image5"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_theaters_white_18dp"/>
                    <TextView
                        android:id="@+id/cast_name5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"
                        android:text="@string/app_name"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/cast_box6"
                    android:visibility="invisible"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image6"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_theaters_white_18dp"/>
                    <TextView
                        android:id="@+id/cast_name6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"
                        android:text="@string/app_name"/>
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/review_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="10dp"
                android:text="@string/review_word"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/review_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>